updated the files to resolve the issue and also using the elastic ip as the node ip was not retrieving

--- a/Terraform/nginx.conf
+++ b/Terraform/nginx.conf
@@ -1,5 +1,5 @@
 # Define a variable to hold the backend server IP address
-set $backend_server "3.91.160.139";
+set $backend_server "${backend_server_ip}";
 
 server {
     listen       80;
